[package]
name = "summing"
description = "A mathematical puzzle game for the terminal"
license = "0BSD"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/xitep/summing"
keywords = ["terminal", "game", "tui"]
categories = ["games"]
exclude = ["summing.png"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1"
rand = { version = "0.9", default-features = false, features = ["small_rng", "os_rng"] }
argh = { version = "0.1", default-features = false, features = ["help"] }
itoa = "1"
constcat = "0.6"

[features]
default = []
dev = []
